<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.profile.profileanak.detail.DetailProfileAnak">

    <LinearLayout
        android:id="@+id/container_top_bar_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/back_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:background="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_profile_anak_title_bar"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dm_sans_bold"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_nama_anak"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@null"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_top_bar_title"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dm_sans_bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/nama_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_anak_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/dm_sans_light"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_tempat_anak"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@null"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/container_nama_anak"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempat_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dm_sans_bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tempat_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempat_anak_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/dm_sans_light"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_tanggal_anak"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@null"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/container_tempat_anak"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dm_sans_bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tanggal_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_anak_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/dm_sans_light"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender_anak"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@null"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/container_tanggal_anak"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dm_sans_bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/gender_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_anak_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/dm_sans_light"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_berat_anak"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@null"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/container_gender_anak"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dm_sans_bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/berat_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat_anak_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/dm_sans_light"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_tinggi_anak"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@null"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/container_berat_anak"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dm_sans_bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tinggi_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_anak_detail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/dm_sans_light"
            android:layout_gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>