<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.about.AboutActivity">

    <LinearLayout
        android:id="@+id/container_top_bar_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/back_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:background="@null"/>
        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title_bar"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/dm_sans_bold"
            android:layout_gravity="center"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/container_top_bar_title"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/container_welcome_txt">
            <LinearLayout
                android:id="@+id/container_welcome_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="horizontal"
                android:gravity="center|top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_top_bar_title">

                <TextView
                    android:id="@+id/selamat_datang_txt"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/selamat_datang_txt"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
                <ImageView
                    android:id="@+id/logo_about"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/logo_about"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_content_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_bg_about"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_welcome_txt">
                <TextView
                    android:id="@+id/tentang_kami_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/about_us_title"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="70dp"
                    android:textColor="@color/black"
                    android:textSize="17dp" />
                <TextView
                    android:id="@+id/tentang_kami_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_light"
                    android:text="@string/content_about_us_txt"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/misi_kami_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/misi_title"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/black"
                    android:textSize="17dp" />
                <TextView
                    android:id="@+id/misi_kami_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_light"
                    android:text="@string/content_misi_txt"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/penawaran_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/penawaran_title"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

                <LinearLayout
                    android:id="@+id/container_content_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/penawaran_number_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_light"
                        android:text="@string/number_one"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:textColor="@color/black"
                        android:textSize="17dp" />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/penawaran_one_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_light"
                            android:text="@string/panduan_title"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="30dp"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/penawaran_one_content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_light"
                            android:text="@string/content_panduan_txt"
                            android:layout_marginEnd="30dp"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintStart_toEndOf="@id/penawaran_one_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/penawaran_one_title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_content_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/two_number_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_light"
                        android:text="@string/number_two"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:textColor="@color/black"
                        android:textSize="17dp" />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/penawaran_two_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_light"
                            android:text="@string/plan_title"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="30dp"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/penawaran_two_content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_light"
                            android:text="@string/content_plan_txt"
                            android:layout_marginEnd="30dp"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintStart_toEndOf="@id/penawaran_two_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/penawaran_two_title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_content_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:orientation="horizontal"
                    android:layout_marginBottom="40dp">
                    <TextView
                        android:id="@+id/three_number_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_light"
                        android:text="@string/number_three"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:textColor="@color/black"
                        android:textSize="17dp" />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/penawaran_three_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_light"
                            android:text="@string/deteksi_title"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="30dp"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/penawaran_three_content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_light"
                            android:text="@string/content_deteksi_txt"
                            android:layout_marginEnd="30dp"
                            android:textColor="@color/black"
                            android:textSize="17dp"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintStart_toEndOf="@id/penawaran_three_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/penawaran_three_title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/closing_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_light"
                    android:text="@string/content_close_txt"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/black"
                    android:textSize="17dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>