<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:cardCornerRadius = "8dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/title_notif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:text="@string/title_notif"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/dm_sans_bold"/>

                <TextView
                    android:id="@+id/time_notif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="@string/time_notif"
                    android:textSize="14sp"
                    android:textColor="@color/color_transparant"
                    android:fontFamily="@font/dm_sans_light"/>
                <TextView
                    android:id="@+id/desc_notif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="@string/short_desc_notif"
                    android:textSize="14sp"
                    android:textColor="@color/color_transparant"
                    android:fontFamily="@font/dm_sans_medium"/>
                <TextView
                    android:id="@+id/view_notif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="15dp"
                    android:gravity="start"
                    android:text="@string/view_notif"
                    android:textSize="14sp"
                    android:textColor="@color/color_btn_signin"
                    android:fontFamily="@font/dm_sans_medium"/>
            </LinearLayout>

            <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_delete_notif"
            android:background="@null"
            android:layout_marginStart="150dp"
            android:layout_gravity="center|top"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>